<resources>
    <string name="app_name">Lite</string>
    <string name="google_search">https://www.google.com.pk/search?q=</string>
    <string name="enter_home_url">Enter Home page</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="enter_title">Enter Title</string>
    <string name="enter_url">Enter Url</string>
    <string name="go">Go</string>
    <string name="clear_history">Clear History</string>
    <string name="back">Back</string>
    <string name="refresh">Refresh</string>
    <string name="forward">Forward</string>
    <string name="title">Title</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="set_home">Set Home Page</string>
    <string name="delete_bookmark">Delete Bookmark ?</string>
    <string name="delete">Delete</string>
    <string name="no_images">No Images</string>
    <string name="show_bookmarks">Bookmarks</string>
    <string name="speed_dials">Most Popular</string>
    <string name="about_us_details">The work is done by Three Legends of MIT."\n"Talha Anwar MITF16E020"\n"Abid Hussain MITF16E004"\n"Ali Altaf Khan MITF16E024"\n"</string>
    <string name="about_us">About Us</string>


    <string name="google">https://www.google.com</string>
    <string name="youtube">https://www.youtube.com</string>
    <string name="facebook">https://www.facebook.com</string>
    <string name="wikipedia">https://www.wikipedia.org</string>
    <string name="amazon">https://www.amazon.com</string>
    <string name="olx">https://www.olx.com</string>
    <string name="yahoo">https://www.yahoo.com</string>
    <string name="instragram">https://www.instagram.com</string>
    <string name="dailymotion">https://www.dailymotion.com</string>
    <string name="pinterest">https://www.pinterest.com</string>
    <string name="twitter">https://www.twitter.com</string>
    <string name="linkedin">https://www.linkedin.com</string>
    <string name="urdupoint">https://www.urdupoint.com/</string>
    <string name="add_bookmark">Add to bookmark</string>
    <string name="private_browse">Private Browsing</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="title_activity_settings">Settings</string>
    <string name="password_protect">Password protect ?</string>
    <string name="enter_password">Enter Password :</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>
    <string name="wrong_password">Wrong password</string>
    <string name="settings">Settings</string>
    <string name="mode">Mode</string>
    <string name="security">Security</string>
    <string name="enable_password">Enable Password ?</string>
    <string name="privacy">Privacy</string>
    <string name="change_password">Create/Change Password</string>
    <string name="enter_current_pass">Enter Current password :</string>
    <string name="about">About App</string>
    <string name="general">Other Settings</string>


</resources>
