<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.talha.lite.Settings">

    <TextView
        android:id="@+id/modeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/mode"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/no_images_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/modeLabel"
        android:padding="15dp"
        android:text="@string/no_images"
        android:textSize="15sp" />


    <android.support.v7.widget.SwitchCompat
        android:id="@+id/no_images"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/no_images_label"
        android:layout_alignBottom="@+id/no_images_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="false" />

    <View
        android:id="@+id/space1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/no_images"
        android:background="@color/colorPrimaryDarkLight"
        android:padding="10dp" />


    <TextView
        android:id="@+id/PrivacyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space1"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/privacy"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/incognito_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/PrivacyLabel"
        android:padding="15dp"
        android:text="@string/private_browse"
        android:textSize="15sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/privatebrowsing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/incognito_label"
        android:layout_alignBottom="@+id/incognito_label"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="false" />

    <View
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/incognito_label"
        android:background="@color/colorPrimaryDarkLight"
        android:padding="10dp" />

    <TextView
        android:id="@+id/Security_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space2"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/security"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Security_label"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="@string/enable_password"
        android:textSize="15sp" />

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/secure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/security"
        android:layout_alignBottom="@+id/security"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:clickable="false" />

    <TextView

        android:id="@+id/changepass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/security"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="@string/change_password"
        android:textSize="15sp" />


    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/security"
        android:layout_marginTop="7dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        app:srcCompat="@drawable/ic_settings" />

    <View
        android:id="@+id/space3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/changepass"
        android:background="@color/colorPrimaryDarkLight"
        android:padding="10dp" />


    <TextView
        android:id="@+id/abouthead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/space3"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/about"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView

        android:id="@+id/aboutus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/abouthead"
        android:gravity="center_vertical"
        android:padding="15dp"
        android:text="@string/about_us"
        android:textSize="15sp" />

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/abouthead"
        android:layout_marginTop="7dp"
        android:background="@android:color/transparent"
        android:clickable="false"
        android:contextClickable="false"
        app:srcCompat="@drawable/ic_aboutus" />

</RelativeLayout>
